tests/invalid/list_magic_contains_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    b: bool = xs.__contains__()
    print(b)


if __name__ == "__main__":
    run_case()
